# purpleifypdf

./: .gitignore
chrome-extension/: package.json  postcss.config.js  tsconfig.json
chrome-extension/config/: transformManifestTemplate.js  webpack.config.js
chrome-extension/public/: index.html
chrome-extension/scripts/: start.js
chrome-extension/src/: background.ts  index.tsx  manifest.template.json
chrome-extension/src/components/: App.tsx  Controls.tsx  ErrorMsg.tsx  PdfDisplay.tsx  Progress.tsx  Toggle.tsx
chrome-extension/src/hooks/: useStorage.tsx
chrome-extension/src/styles/: index.css  tailwind.css
chrome-extension/src/types/: tailwind.macro.d.ts
chrome-extension/src/utils/: backgroundApi.ts  env.ts  hexcolor.tsx  quality.tsx
server/: README.md  mix.exs
server/assets/css/: app.scss
server/config/: config.exs  dev.exs  prod.exs
server/lib/: server_web.ex
server/lib/server/: transform.ex
server/lib/server/transform/: color.ex  options.ex  port.ex
server/lib/server_web/: endpoint.ex  router.ex
server/lib/server_web/controllers/: transform_controller.ex
server/lib/server_web/templates/layout/: app.html.eex
server/lib/server_web/views/: error_helpers.ex  transform_view.ex
transform/: Cargo.toml  Rocket.toml
transform/benches/: integration.rs
transform/scripts/: bench-remotely.sh  curl-bench-local-server.sh  curl-bench-remote-server.sh  deploy.sh  generate_dev_tls_keys.sh  install-deps.sh  install-dev-deps.sh
transform/src/: lib.rs  pdf_to_images.rs  pdf_to_pdf.rs
transform/test_assets/: localhost.crt  localhost.key
(+1 files in other folders)
